# hierarchical_data

./: README.md  db.sqlite3  manage.py  pyproject.toml
hierarchy/: asgi.py  settings.py  urls.py  wsgi.py
hierarchyapp/: admin.py  apps.py  models.py  views.py
hierarchyapp/migrations/: 0001_initial.py
templates/: index.html
